Add view, controller, and form for the privacy settings

--- a/app/views/decidim/privacy/privacy_settings/show.html.erb
+++ b/app/views/decidim/privacy/privacy_settings/show.html.erb
@@ -1,1 +1,21 @@
-# TOBE ADDED
+<% add_decidim_page_title(t("privacy_settings", scope: "layouts.decidim.user_profile")) %>
+<% content_for(:subtitle) { t("privacy_settings", scope: "layouts.decidim.user_profile") } %>
+<%= form_for(@privacy_settings, url: privacy_settings_path, method: :put, class: "user-form") do |f| %>
+  <%= t(".profile_publicity").try("html_safe") %>
+  <div class="switch tiny switch-with-label notifications_from_followed">
+    <%= f.label :published_at do %>
+      <%= f.check_box :published_at, label: false, class: "switch-input" %>
+      <span class="switch-paddle"></span>
+      <span class="switch-label"><%= t(".enable_public_profile") %></span>
+    <% end %>
+  </div>
+  <%= t(".private_messaging").try("html_safe") %>
+  <div class="switch tiny switch-with-label notifications_from_followed">
+    <%= f.label :allow_private_messaging do %>
+      <%= f.check_box :allow_private_messaging, label: false, class: "switch-input" %>
+      <span class="switch-paddle"></span>
+      <span class="switch-label"><%= t(".enable_private_messaging") %></span>
+    <% end %>
+  </div>
+  <%= f.submit t(".update_privacy_settings") %>
+<% end %>
