--- a/app/views/decidim/proposals/proposals/index.html.erb
+++ b/app/views/decidim/proposals/proposals/index.html.erb
@@ -32,7 +32,7 @@
       <%= render partial: "count" %>
     </h2>
     <% if current_settings.creation_enabled && current_component.participatory_space.can_participate?(current_user) %>
-      <%= action_authorized_link_to :create, new_proposal_path, class: "title-action__action button small", data: { "redirect_url" => new_proposal_path, "open" => "privacy-consent"} do %>
+      <%= action_authorized_link_to :create, new_proposal_path, class: "title-action__action button small data-privacy-modal", data: { "redirect_url" => new_proposal_path, "open" => "privacy-consent"} do %>
         <%= t(".new_proposal") %>
         <%= icon "plus", role: "img", "aria-hidden": true %>
       <% end %>
