--- a/app/views/layouts/decidim/_user_menu.html.erb
+++ b/app/views/layouts/decidim/_user_menu.html.erb
@@ -3,7 +3,7 @@
   <li role="presentation"><%= link_to t(".public_profile"), decidim.profile_path(current_user.nickname), role: "menuitem" %></li>
 <% end %>
 <li role="presentation"><%= link_to t(".notifications"), decidim.notifications_path, role: "menuitem" %></li>
-<% if current_user.allow_private_messaging == true  && current_user.published_at.present? %>
+<% unless current_user.private_messaging_disabled? %>
   <li role="presentation"><%= link_to t(".conversations"), decidim.conversations_path, role: "menuitem" %></li>
 <% end %>
 <% if allowed_to? :read, :admin_dashboard %>
