privacy-settings-notification-icon-lined-with-text

--- a/app/views/layouts/decidim/user_profile.html.erb
+++ b/app/views/layouts/decidim/user_profile.html.erb
@@ -5,7 +5,7 @@
   <div class="callout secondary">
     <div class="row margin-bottom-1">
       <div class="columns small-12">
-        <%= icon "information", class: "icon--big margin-right-1", role: "img", "aria-hidden": true %>
+        <%= icon "information", class: "icon--big margin-right-1 private-icon", role: "img", "aria-hidden": true %>
         <div class="h5 display-inline"><strong><%= t(".public") %></strong></div>
       </div>
     </div>
