--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -1,17 +1,17 @@
 <div class="reveal" id="publishAccountModal" data-reveal role="dialog" aria-modal="true" aria-labelledby="privacy-modal-label">
   <div class="reveal__header">
-    <h2 id="privacy-consent-label" class="reveal__title text-center"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
+    <h2 id="privacy-consent-label" class="reveal__title margin-left-1"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
     <button class="close-button" data-close aria-label="<%= t("close_modal", scope: "decidim.privacy.partials.privacy_consent") %>"
       type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="row">
-    <div class="columns medium-10 medium-centered">
+    <div class="columns medium-10">
      <%= t("content", scope:"decidim.privacy.partials.privacy_consent").try(:html_safe) %>
 
      <%= decidim_form_for(Decidim::Privacy::PublishAccountForm.new, url: decidim_privacy.update_account_publicity_path, html: { class: "public-account-form update-privacy" }, method: :put, remote: true) do |f| %>
-       <div class="field">
+       <div class="field margin-1">
          <%= f.check_box :agree_public_profile,label: t("agree_to_public_profile", scope: "decidim.privacy.partials.privacy_consent"), required: true %>
        </div>
        <div class="button--double margin-1">
