--- a/app/views/decidim/privacy/privacy_block.html.erb
+++ b/app/views/decidim/privacy/privacy_block.html.erb
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="columns large-6 medium-centered">
-        <button class="button expanded" data-open="publishAccountModal" data-redirect-url=<%= request.original_url %>><%= t("decidim.privacy.partials.privacy_consent.make_profile_public") %></button>
+        <button class="button expanded" data-open="publishAccountModal" data-redirect-url=<%= request.original_url %>><%= t(".button") %></button>
       </div>
     </div>
   </div>
