--- a/app/views/layouts/decidim/_user_menu.html.erb
+++ b/app/views/layouts/decidim/_user_menu.html.erb
@@ -3,7 +3,7 @@
   <li role="presentation"><%= link_to t(".public_profile"), decidim.profile_path(current_user.nickname), role: "menuitem" %></li>
 <% end %>
 <li role="presentation"><%= link_to t(".notifications"), decidim.notifications_path, role: "menuitem" %></li>
-<% unless current_user.private_messaging_disabled? %>
+<% unless current_user.private_or_no_messaging? %>
   <li role="presentation"><%= link_to t(".conversations"), decidim.conversations_path, role: "menuitem" %></li>
 <% end %>
 <% if allowed_to? :read, :admin_dashboard %>
