--- a/app/views/layouts/decidim/_wrapper.html.erb
+++ b/app/views/layouts/decidim/_wrapper.html.erb
@@ -56,7 +56,7 @@ end
                   <%= link_to decidim.notifications_path, class: "topbar__notifications #{current_user.notifications.any? ? "is-active" : ""}" do %>
                     <%= icon "bell", role: "img", aria_label: t("layouts.decidim.user_menu.notifications") %>
                   <% end %>
-                  <% unless current_user.private_messaging_disabled? %>
+                  <% unless current_user.private_or_no_messaging? %>
                     <%= link_to decidim.conversations_path, class: "topbar__conversations #{current_user.unread_conversations.any? ? "is-active" : ""}" do %>
                       <%= icon "envelope-closed", role: "img", aria_label: t("layouts.decidim.user_menu.conversations") %>
                     <% end %>
