--- a/app/cells/decidim/members/show.erb
+++ b/app/cells/decidim/members/show.erb
@@ -1,9 +1,14 @@
 <div class="callout secondary <%= "hide" if memberships.any? %>">
   <p><%= t("decidim.members.no_members") %></p>
 </div>
-<div class="row small-up-1 medium-up-2 card-grid">
-  <% memberships.each do |membership| %>
-    <%= cell membership_cell_name, membership %>
-  <% end %>
+<div class="callout secondary <%= "hide" if memberships.any? { |membership| membership.user } %>">
+  <p><%= t("decidim.members.no_public_members") %></p>
 </div>
-<%= decidim_paginate memberships if memberships.any? %>
+<% if memberships.any? { |membership| membership.user } %>
+  <div class="row small-up-1 medium-up-2 card-grid">
+    <% memberships.each do |membership| %>
+      <%= cell membership_cell_name, membership %>
+    <% end %>
+  </div>
+  <%= decidim_paginate memberships %>
+<% end %>
