Rework some source translations

--- a/app/views/decidim/privacy/message_block.html.erb
+++ b/app/views/decidim/privacy/message_block.html.erb
@@ -10,7 +10,7 @@
       <div class="columns large-6 text-center medium-centered">
         <div class="card">
           <div class="card__content">
-            <%= t(".content").try("html_safe") %>
+            <%= t(".content_html") %>
           </div>
         </div>
       </div>
