--- a/app/views/decidim/privacy/privacy_settings/show.html.erb
+++ b/app/views/decidim/privacy/privacy_settings/show.html.erb
@@ -1,7 +1,7 @@
 <% add_decidim_page_title(t("privacy_settings", scope: "layouts.decidim.user_profile")) %>
 <% content_for(:subtitle) { t("privacy_settings", scope: "layouts.decidim.user_profile") } %>
 <%= form_for(@privacy_settings, url: privacy_settings_path, method: :put, class: "user-form") do |f| %>
-  <%= t(".profile_publicity").try("html_safe") %>
+  <%= t(".profile_publicity_html") %>
   <div class="switch tiny switch-with-label notifications_from_followed">
     <%= f.label :published_at do %>
       <%= f.check_box :published_at, data:{ publicity: @privacy_settings.published_at }, label: false, class: "switch-input" %>
@@ -10,7 +10,7 @@
     <% end %>
   </div>
   <div id="toggle-privacy-messaging" class="hide">
-    <%= t(".private_messaging").try("html_safe") %>
+    <%= t(".private_messaging_html") %>
     <div class="switch tiny switch-with-label notifications_from_followed">
       <%= f.label :allow_private_messaging do %>
         <%= f.check_box :allow_private_messaging, label: false, class: "switch-input" %>
