--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -7,7 +7,7 @@
     </button>
   </div>
   <div class="row">
-     <%= t("content", scope:"decidim.privacy.partials.privacy_consent").try(:html_safe) %>
+     <%= t("content_html", scope:"decidim.privacy.partials.privacy_consent") %>
   </div>
   <div class="row">
     <div class="columns medium-12">
