--- a/app/cells/decidim/members/show.erb
+++ b/app/cells/decidim/members/show.erb
@@ -4,9 +4,9 @@
 <div class="callout secondary <%= "hide" if memberships.any? { |membership| membership.user } %>">
   <p><%= t("decidim.members.no_public_members") %></p>
 </div>
-<% if memberships.any? { |membership| membership.user } %>
+<% if memberships.any? { |membership| membership.user.present? } %>
   <div class="row small-up-1 medium-up-2 card-grid">
-    <% memberships.each do |membership| %>
+    <% memberships.select { |membership| membership.user.present? }.each do |membership| %>
       <%= cell membership_cell_name, membership %>
     <% end %>
   </div>
