Fix layout problem with the profile publicity consent modal

--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -6,7 +6,7 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="row">
+  <div class="row columns">
      <%= t("content_html", scope:"decidim.privacy.partials.privacy_consent") %>
   </div>
   <div class="row">
