Add spacing to the privacy settings private messaging section

--- a/app/views/decidim/privacy/privacy_settings/show.html.erb
+++ b/app/views/decidim/privacy/privacy_settings/show.html.erb
@@ -9,7 +9,7 @@
       <span class="switch-label"><%= t(".enable_public_profile") %></span>
     <% end %>
   </div>
-  <div id="toggle-privacy-messaging" class="hide">
+  <div id="toggle-privacy-messaging" class="hide margin-top-2">
     <%= t(".private_messaging_html") %>
     <div class="switch tiny switch-with-label notifications_from_followed">
       <%= f.label :allow_private_messaging do %>
