--- a/app/views/decidim/account/show.html.erb
+++ b/app/views/decidim/account/show.html.erb
@@ -1,6 +1,6 @@
 <%= alert_box("", "account-notification hide", true) %>
-<%= add_decidim_page_title(t("profile", scope: "layouts.decidim.user_menu")) %>
-<%= content_for(:subtitle) { t("profile", scope: "layouts.decidim.user_menu") } %>
+<% add_decidim_page_title(t("profile", scope: "layouts.decidim.user_menu")) %>
+<% content_for(:subtitle) { t("profile", scope: "layouts.decidim.user_menu") } %>
 
 <div class="row">
   <%= decidim_form_for(@account, url: account_path, method: :put, html: { autocomplete: "on" }) do |f| %>
