--- a/app/views/decidim/notifications_settings/show.html.erb
+++ b/app/views/decidim/notifications_settings/show.html.erb
@@ -31,7 +31,7 @@
   </div>
 
 
-  <% if @notifications_settings.user_is_moderator?(current_user) %>
+  <% if current_user.moderator? %>
     <p><strong><%= t(".administrators") %></strong></p>
     <div class="switch tiny switch-with-label email_on_moderations">
       <label>
