--- a/app/views/decidim/account/_old_password_field.html.erb
+++ b/app/views/decidim/account/_old_password_field.html.erb
@@ -1,9 +1,10 @@
-<div div class="columns small-10 end radius <%= "hide" unless local_assigns.has_key?(:unhide)  %>" id="old_password_field" data-toggler=".hide">
-  <%= form.send(:custom_label, :old_password, t("activemodel.attributes.user.old_password"), { required: true }) %>
-
-  <% if local_assigns.has_key?(:show_help_text) %>
-    <%= form.password_field :old_password, old_password_options %>
-  <% else %>
-    <%= form.password_field :old_password, autocomplete: "current-password", required: true, label: false %>
-  <% end %>
+<%
+old_password_options = {
+  autocomplete: "current-password",
+  required: true
+}
+old_password_options[:help_text] = t("devise.passwords.edit.old_password_help") if local_assigns.has_key?(:show_help_text) && show_help_text
+%>
+<div div class="columns small-12 end radius margin-top-3 <%= "hide" unless local_assigns.has_key?(:unhide)  %>" id="old_password_field" data-toggler=".hide">
+  <%= form.password_field :old_password, **old_password_options %>
 </div>
