Remove incorrect label from the close window button
The label needs to match the text visible on the screen.

--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -19,7 +19,7 @@
           <%= f.submit t("make_profile_public", scope: "decidim.privacy.partials.privacy_consent"), class: "button expanded" %>
         </div>
         <div class="text-center">
-          <button class="link" data-close aria-label="<%= t("close_modal", scope: "decidim.privacy.partials.privacy_consent") %>" type="button">
+          <button class="link" data-close type="button">
             <%= t("do_not_agree", scope: "decidim.privacy.partials.privacy_consent")%>
           </button>
         </div>
