--- a/app/views/decidim/account/_old_password_field.html.erb
+++ b/app/views/decidim/account/_old_password_field.html.erb
@@ -5,6 +5,6 @@ old_password_options = {
 }
 old_password_options[:help_text] = t("devise.passwords.edit.old_password_help") if local_assigns.has_key?(:show_help_text) && show_help_text
 %>
-<div div class="columns small-12 end radius margin-top-3 <%= "hide" unless local_assigns.has_key?(:unhide)  %>" id="old_password_field" data-toggler=".hide">
+<div class="columns small-12 end radius margin-top-3 <%= "hide" unless local_assigns.has_key?(:unhide)  %>" id="old_password_field" data-toggler=".hide">
   <%= form.password_field :old_password, **old_password_options %>
 </div>
