Update Decidim to 0.28

--- a/app/views/decidim/account/show.html.erb
+++ b/app/views/decidim/account/show.html.erb
@@ -57,4 +57,4 @@
     </div>
   <% end %>
 </div>
-<%= javascript_pack_tag("decidim_privacy_user_form")%>
+<%= append_javascript_pack_tag("decidim_privacy_user_form")%>
