--- a/app/views/decidim/privacy/privacy_settings/show.html.erb
+++ b/app/views/decidim/privacy/privacy_settings/show.html.erb
@@ -29,4 +29,4 @@
   </div>
   <%= f.submit t(".save_privacy_settings") %>
 <% end %>
-<%= javascript_pack_tag "decidim_privacy_settings" %>
+<%= append_javascript_pack_tag "decidim_privacy_settings" %>
