--- a/app/views/decidim/privacy/message_block.html.erb
+++ b/app/views/decidim/privacy/message_block.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
-  <div class="row collapse">
-    <div class="row collapse">
+  <div class="row">
+    <div class="row">
       <div class="columns large-8 large-centered text-center page-title">
         <h1><%= t(".title") %></h1>
       </div>
