--- a/app/views/layouts/decidim/header/_main_links_dropdown.html.erb
+++ b/app/views/layouts/decidim/header/_main_links_dropdown.html.erb
@@ -5,12 +5,14 @@
     <span class="text-secondary"><%= t("layouts.decidim.user_menu.profile") %></span>
   <% end %>
 </li>
-<li>
-  <%= link_to decidim.profile_path(current_user.nickname), class: "dropdown__item" do %>
-    <%= icon "account-circle-line" %>
-    <span class="text-secondary"><%= t("layouts.decidim.user_menu.public_profile") %></span>
-  <% end %>
-</li>
+<% if current_user.public? %>
+  <li>
+    <%= link_to decidim.profile_path(current_user.nickname), class: "dropdown__item" do %>
+      <%= icon "account-circle-line" %>
+      <span class="text-secondary"><%= t("layouts.decidim.user_menu.public_profile") %></span>
+    <% end %>
+  </li>
+<% end %>
 <li>
   <%= link_to decidim.notifications_path, class: "dropdown__item" do %>
     <%= icon "notification-3-line" %>
