--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -1,13 +1,13 @@
-<div class="reveal" id="publishAccountModal" data-reveal role="dialog" aria-modal="true" aria-labelledby="privacy-modal-label">
-  <div class="reveal__header">
-    <h2 id="privacy-consent-label" class="reveal__title"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
+<%= decidim_modal id: "publish-account-modal" do %>
+  <div data-dialog-container>
+    <h2 id="privacy-consent-label"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
     <button class="close-button" data-close aria-label="<%= t("close_modal", scope: "decidim.privacy.partials.privacy_consent") %>"
       type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="row columns">
-     <%= t("content_html", scope:"decidim.privacy.partials.privacy_consent") %>
+      <%= t("content_html", scope:"decidim.privacy.partials.privacy_consent") %>
   </div>
   <div class="row">
     <div class="columns medium-12">
@@ -26,4 +26,4 @@
       <% end %>
     </div>
   </div>
-</div>
+<% end %>
