--- a/app/views/layouts/decidim/footer/_main_links.html.erb
+++ b/app/views/layouts/decidim/footer/_main_links.html.erb
@@ -1,20 +1,13 @@
 <%= footer_menu.render %>
 
-<nav role="navigation" aria-label="<%= t("layouts.decidim.footer.resources") %>">
-  <h2 class="h4 mb-4"><%= t("layouts.decidim.footer.resources") %></h2>
-  <ul class="space-y-4 break-inside-avoid">
-    <li class="font-semibold underline"><%= link_to t("decidim.profiles.show.activity"), decidim.last_activities_path %></li>
-    <li class="font-semibold underline"><%= link_to t("decidim.pages.home.extended.meetings"), Decidim::Meetings::DirectoryEngine.routes.url_helpers.root_path %></li>
-    <li class="font-semibold underline"><%= link_to t("layouts.decidim.footer.download_open_data"), decidim.open_data_download_path %></li>
-  </ul>
-</nav>
-
 <nav role="navigation" aria-label="<%= t("layouts.decidim.user_menu.profile") %>">
   <h2 class="h4 mb-4"><%= t("layouts.decidim.user_menu.profile") %></h2>
   <ul class="space-y-4 break-inside-avoid">
     <% if current_user %>
       <li class="font-semibold underline"><%= link_to t("layouts.decidim.user_menu.configuration"), decidim.account_path %></li>
-      <li class="font-semibold underline"><%= link_to t("layouts.decidim.user_menu.public_profile"), decidim.profile_path(current_user.nickname) %></li>
+      <% if current_user.public? %>
+        <li class="font-semibold underline"><%= link_to t("layouts.decidim.user_menu.public_profile"), decidim.profile_path(current_user.nickname) %></li>
+      <% end %>
       <li class="font-semibold underline"><%= link_to t("layouts.decidim.user_menu.notifications"), decidim.notifications_path %></li>
       <% unless current_user.private_or_no_messaging? %>
         <li class="font-semibold underline"><%= link_to t("layouts.decidim.user_menu.conversations"), decidim.conversations_path %></li>
@@ -27,3 +20,14 @@
     <% end %>
   </ul>
 </nav>
+
+<nav role="navigation" aria-label="<%= t("layouts.decidim.footer.resources") %>">
+  <h2 class="h4 mb-4"><%= t("layouts.decidim.footer.resources") %></h2>
+  <ul class="space-y-4 break-inside-avoid">
+    <li class="font-semibold underline"><%= link_to t("decidim.profiles.show.activity"), decidim.last_activities_path %></li>
+    <li class="font-semibold underline"><%= link_to t("decidim.pages.home.extended.meetings"), Decidim::Meetings::DirectoryEngine.routes.url_helpers.root_path %></li>
+    <li class="font-semibold underline"><%= link_to t("layouts.decidim.footer.download_open_data"), decidim.open_data_download_path %></li>
+  </ul>
+</nav>
+
+<%= cell("decidim/footer_topics", nil) %>
