Fix bugs / Fix specs

--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -1,7 +1,7 @@
 <%= decidim_modal id: "publish-account-modal" do %>
-  <div data-dialog-container>
+  <div>
     <h2 id="privacy-consent-label"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
-    <button class="close-button" data-close aria-label="<%= t("close_modal", scope: "decidim.privacy.partials.privacy_consent") %>"
+    <button class="close-button" data-dialog-close="publish-account-modal" aria-label="<%= t("close_modal", scope: "decidim.privacy.partials.privacy_consent") %>"
       type="button">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -19,7 +19,7 @@
           <%= f.submit t("make_profile_public", scope: "decidim.privacy.partials.privacy_consent"), class: "button expanded" %>
         </div>
         <div class="text-center">
-          <button class="link" data-close type="button">
+          <button class="link" data-dialog-close="publish-account-modal" type="button">
             <%= t("do_not_agree", scope: "decidim.privacy.partials.privacy_consent")%>
           </button>
         </div>
