--- a/app/views/decidim/privacy/privacy_block.html.erb
+++ b/app/views/decidim/privacy/privacy_block.html.erb
@@ -7,7 +7,7 @@
   </p>
   <div class="form__wrapper-block">
     <button class="button button__sm md:button__lg button__secondary"
-      data-open="publish-account-modal" data-redirect-url=<%= request.original_url %>>
+      data-dialog="publish-account-modal" data-redirect-url=<%= request.original_url %>>
       <%= t("decidim.privacy.privacy_block.button") %>
     </button>
   </div>
