Bug fixes / Spec fixes

--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -1,4 +1,4 @@
-<%= decidim_modal id: "publish-account-modal" do %>
+<%= decidim_modal id: "publishAccountModal" do %>
   <div>
     <h2 class="h2" id="privacy-consent-label"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
   </div>
