--- a/app/views/decidim/privacy/privacy_block.html.erb
+++ b/app/views/decidim/privacy/privacy_block.html.erb
@@ -6,7 +6,7 @@
     <%= t("decidim.privacy.privacy_block.content_html") %>
   </p>
   <div class="form__wrapper-block">
-    <button class="button button__sm md:button__lg button__secondary" data-dialog-open="publish-account-modal" data-redirect-url=<%= request.original_url %>>
+    <button class="button button__sm md:button__lg button__secondary" data-dialog-open="publishAccountModal" data-redirect-url=<%= request.original_url %>>
       <%= t("decidim.privacy.privacy_block.button") %>
     </button>
   </div>
