--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -1,5 +1,5 @@
 <%= decidim_modal id: "publishAccountModal" do %>
-  <div>
+  <div class="pb-4">
     <h2 class="h2" id="privacy-consent-label"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
   </div>
   <div class="row columns">
