Fix modal close

--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -16,7 +16,7 @@
             <%= f.submit t("make_profile_public", scope: "decidim.privacy.partials.privacy_consent"), class: "button button__sm md:button__lg button__secondary" %>
           </div>
           <div class="inline">
-            <button class="button button__sm md:button__lg button__transparent-secondary" data-dialog-close="publish-account-modal" type="button">
+            <button class="button button__sm md:button__lg button__transparent-secondary" data-dialog-close="publishAccountModal" type="button">
               <%= t("do_not_agree", scope: "decidim.privacy.partials.privacy_consent")%>
             </button>
           </div>
