Fix problems with account updating and user groups / Add specs

--- a/app/views/decidim/account/_old_password_field.html.erb
+++ b/app/views/decidim/account/_old_password_field.html.erb
@@ -1,7 +1,6 @@
 <%
 old_password_options = {
-  autocomplete: "current-password",
-  required: true
+  autocomplete: "current-password"
 }
 old_password_options[:help_text] = t("devise.passwords.edit.old_password_help") if local_assigns.has_key?(:show_help_text) && show_help_text
 %>
