--- a/app/cells/decidim/privacy/anonymity_modal/show.erb
+++ b/app/cells/decidim/privacy/anonymity_modal/show.erb
@@ -1,26 +1,25 @@
-<div class="reveal" id="AnonymityModal" data-reveal role="dialog" aria-modal="true" aria-labelledby="anonymity-modal-label">
+<div class="reveal" id="anonymityModal" data-reveal role="dialog" aria-modal="true" aria-labelledby="anonymity-modal-label">
   <div class="reveal__header">
-    <h2 id="anonymity-consent-label" class="reveal__title"><%= t("make_profile_public", scope:"decidim.privacy.partials.privacy_consent") %></h2>
-    <button class="close-button" data-close aria-label="<%= t("close_modal", scope: "decidim.privacy.partials.privacy_consent") %>"
+    <h2 id="anonymity-consent-label" class="reveal__title"><%= t("title", scope:"decidim.privacy.partials.anonymity_prompt") %></h2>
+    <button class="close-button" data-close aria-label="<%= t("close_modal", scope: "decidim.privacy.partials.anonymity_prompt") %>"
       type="button">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="row columns">
-     <%= t("content_html", scope:"decidim.privacy.partials.privacy_consent", user_name: current_user.name, nickname: current_user.nickname, profile_settings: link_to(t("profile_settings", scope: "decidim.privacy.partials.privacy_consent"), decidim.account_path, class: "text-secondary")).html_safe %>
+    <%= t("content_html", scope:"decidim.privacy.partials.anonymity_prompt") %>
   </div>
   <div class="row">
     <div class="columns medium-12">
       <%= decidim_form_for(Decidim::Privacy::AnonymityForm.new, url: decidim_privacy.update_anonymity_path, html: { class: "anonymity-form update-anonymity" }, method: :put, remote: true) do |f| %>
-        <div class="field margin-bottom-1">
-          <%= f.check_box :agree_public_profile,label: t("agree_to_public_profile", scope: "decidim.privacy.partials.privacy_consent"), required: true %>
-        </div>
+        <%= f.hidden_field :set_anonymity, value: true, id: "anonymity-hidden-field" %>
+
         <div class="button--double">
-          <%= f.submit t("make_profile_public", scope: "decidim.privacy.partials.privacy_consent"), class: "button expanded" %>
+          <%= f.submit t("continue", scope: "decidim.privacy.partials.anonymity_prompt"), class: "button expanded" %>
         </div>
         <div class="text-center">
-          <button class="link" data-close type="button">
-            <%= t("do_not_agree", scope: "decidim.privacy.partials.privacy_consent")%>
+          <button id="publicize" class="link" type="button">
+            <%= t("publicize", scope: "decidim.privacy.partials.anonymity_prompt")%>
           </button>
         </div>
       <% end %>
