Add anonymitymodal functionality

--- a/app/cells/decidim/privacy/anonymity_modal/show.erb
+++ b/app/cells/decidim/privacy/anonymity_modal/show.erb
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="columns medium-12">
       <%= decidim_form_for(Decidim::Privacy::AnonymityForm.new, url: decidim_privacy.update_anonymity_path, html: { class: "anonymity-form update-anonymity" }, method: :put, remote: true) do |f| %>
-        <%= f.hidden_field :set_anonymity, value: true, id: "anonymity-hidden-field" %>
+        <%= f.hidden_field :set_anonymity, value: true %>
 
         <div class="button--double">
           <%= f.submit t("continue", scope: "decidim.privacy.partials.anonymity_prompt"), class: "button expanded" %>
