--- a/app/cells/decidim/privacy/publish_account_modal/show.erb
+++ b/app/cells/decidim/privacy/publish_account_modal/show.erb
@@ -11,19 +11,27 @@
   </div>
   <div class="row">
     <div class="columns medium-12">
-      <%= decidim_form_for(Decidim::Privacy::PublishAccountForm.new, url: decidim_privacy.update_account_publicity_path, html: { class: "public-account-form update-privacy" }, method: :put, remote: true) do |f| %>
+      <%= decidim_form_for(Decidim::Privacy::PublishAccountForm.new, url: decidim_privacy.update_account_publicity_path, html: { class: "public-account-form", id: "update-privacy-form" }, method: :put, remote: true) do |f| %>
         <div class="field margin-bottom-1">
           <%= f.check_box :agree_public_profile,label: t("agree_to_public_profile", scope: "decidim.privacy.partials.privacy_consent"), required: true %>
         </div>
         <div class="button--double">
           <%= f.submit t("make_profile_public", scope: "decidim.privacy.partials.privacy_consent"), class: "button expanded" %>
         </div>
-        <div class="text-center">
+      <% end %>
+      <div class="text-center">
+        <% if Decidim::Privacy.anonymity_enabled && current_user.anonymity.nil? %>
+          <%= decidim_form_for(Decidim::Privacy::AnonymityForm.new, url: decidim_privacy.update_anonymity_path, html: { class: "anonymity-form", id: "update-anonymity-form" }, method: :put, remote: true) do |f| %>
+            <%= f.hidden_field :set_anonymity, value: true, id: "anonymity-hidden-field" %>
+
+            <%= f.submit t("continue_anonymous", scope: "decidim.privacy.partials.privacy_consent"), class: "link" %>
+          <% end %>
+        <% else %>
           <button class="link" data-close type="button">
             <%= t("do_not_agree", scope: "decidim.privacy.partials.privacy_consent")%>
           </button>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
